# projeto-ceub

./: README.md  docker-compose.yaml
doceria-backend/: .gitignore  Dockerfile  PyWhatKit_DB.txt  README.md  database.url  entrypoint.sh  pyproject.toml
doceria-backend/doceria_backend/: app.py  database.py  models.py  security.py  settings.py
doceria-backend/doceria_backend/routes/: auth.py  cliente.py  mensagem.py  pedido.py  produto.py  usuario.py
doceria-backend/doceria_backend/schemas/: cliente.py  mensagem.py  pedido.py  pedido_produto.py  produto.py  usuario.py
doceria-backend/migrations/: env.py
doceria-backend/migrations/versions/: 37a82bf141ff_.py  41b4d709e5ef_cria_models_base.py  5fb54324dd0a_.py  7c260e555d63_.py  8b3f4e8181de_.py  a100ab725b45_.py  a556291bccb2_.py  d23b8480628c_inicia_banco_de_dados.py  e4cd53545244_atualiza_parametros_da_coluna_.py
doceria-backend/tests/: conftest.py  test_app.py  test_auth.py  test_cliente.py  test_db.py  test_mensagem.py  test_pedido.py  test_produto.py  test_security.py  test_usuario.py
doceria-frontend/: Dockerfile  README.md  package-lock.json  package.json  tailwind.config.js
doceria-frontend/public/: index.html
doceria-frontend/src/: App.js  index.js  util.js
doceria-frontend/src/Components/: Calendario.js  CalendarioAuxiliar.js  CalendarioHeader.js  CalendarioPage.js  ContatoModal.js  Content.js  Dia.js  DoceCard.js  EventoModal.js  Header.js  Home.js  HomePage.js  LoginPage.js  Mes.js  MeusPedidos.js  PedidoModal.js  RealizarPedido.js  (+4 more)
documentacao/etapa-3/: Modelo de Documento de Visão.docx
(+21 files in other folders)
